--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
     id 'kotlin-kapt'
 }
 
@@ -49,7 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
-//Fragment
+    //Fragment
     implementation "androidx.fragment:fragment-ktx:1.5.2"
 
     //Koin
@@ -74,4 +75,5 @@ dependencies {
     // Navigation Component
     def nav_version = "2.5.1"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"}
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+}
